Fix for bug 105825. Don't remove empty body part when sending message. Patch submitted by :parish@ntlworld.com. R=cavin, SR=sspitzer